--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start:dev": "nodemon .",
     "test": "jest --passWithNoTests",
     "test:dev": "jest --watchAll",
-    "test:coverage": "jest --coverage --watchAll=false --passWithNoTests"
+    "test:coverage": "jest --coverage --watchAll=false --passWithNoTests",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -33,7 +34,8 @@
     "jest": "^29.3.1",
     "jest-ts-webcompat-resolver": "^1.0.0",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "husky": "^8.0.0"
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
