--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,6 @@ sonar.sources=./src
 sonar.sourceEncoding=UTF-8
 
 sonar.test.inclusions=src/**/*.test.ts, src/**/*.test.tsx
-sonar.coverage.exclusions=src/index.tsx , src/setupTests.ts , src/__snapshots__/*.snap
+sonar.coverage.exclusions=src/index.tsx , src/setupTests.ts , src/__snapshots__/*.snap, src/loadEnvironments.ts
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
