--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-xo": "^0.42.0",
     "eslint-config-xo-typescript": "^0.53.0",
+    "husky": "^8.0.0",
     "jest": "^29.3.1",
     "jest-ts-webcompat-resolver": "^1.0.0",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.8.4",
-    "husky": "^8.0.0"
+    "typescript": "^4.8.4"
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
@@ -44,7 +44,7 @@
     "@types/multer": "^1.4.7",
     "@types/supertest": "^2.0.12",
     "bcryptjs": "^2.4.3",
-    "chalk": "^5.1.2",
+    "chalk": "^4.1.2",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
