--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.sources=./src
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 
-sonar.test.inclusions=src/**/*.test.ts, src/**/*.test.tsx
-sonar.coverage.exclusions=src/index.tsx , src/setupTests.ts , src/__snapshots__/*.snap, src/loadEnvironments.ts, src/server/startServer.ts, src/database/connectDatabase.ts
+sonar.test.inclusions=src/**/*.test.ts
+sonar.coverage.exclusions=src/index.tsx, src/loadEnvironments.ts, src/server/startServer.ts, src/database/connectDatabase.ts
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
