--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,6 @@ sonar.sources=./src
 sonar.sourceEncoding=UTF-8
 
 sonar.test.inclusions=src/**/*.test.ts
-sonar.coverage.exclusions=src/index.tsx, src/loadEnvironments.ts, src/server/startServer.ts, src/database/connectDatabase.ts
+sonar.coverage.exclusions=src/index.ts, src/loadEnvironments.ts, src/server/startServer.ts, src/database/connectDatabase.ts
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
