Add environment variables to workflows

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -20,3 +20,6 @@ jobs:
           DEBUG: ${{ secrets.DEBUG }}
           MONGODB_URL: ${{ secrets.MONGODB_URL }}
           JWT_SECRET: ${{secrets.JWT_SECRET}}
+          SUPABASE_URL: ${{secrets.SUPABASE_URL}}
+          SUPABASE_KEY: ${{secrets.SUPABASE_KEY}}
+          SUPABASE_BUCKET_ID: ${{secrets.SUPABASE_BUCKET_ID}}
