--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -21,6 +21,9 @@ jobs:
           DEBUG: ${{ secrets.DEBUG }}
           MONGODB_URL: ${{ secrets.MONGODB_URL }}
           JWT_SECRET: ${{secrets.JWT_SECRET}}
+          SUPABASE_URL: ${{secrets.SUPABASE_URL}}
+          SUPABASE_KEY: ${{secrets.SUPABASE_KEY}}
+          SUPABASE_BUCKET_ID: ${{secrets.SUPABASE_BUCKET_ID}}
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
